# fuzzy

./: .gitignore  Cargo.toml  DEV.md  Dockerfile  README.md  build.rs
db/: Makefile  env
docs/: DEV.md  PROFILE.md  USAGE.md  USECASES.md
migrations/2020-05-03-131944_create_workers/: down.sql  up.sql
migrations/2020-05-05-021156_create_tasks/: down.sql  up.sql
migrations/2020-06-05-040319_crash_duplicate/: down.sql  up.sql
migrations/2020-07-09-031738_corpus_duplicate_constraint/: down.sql  up.sql
migrations/2020-09-23-153211_create_tracing/: down.sql  up.sql
proto/: comms.proto  xpc.proto
samples/profiles/: executor.json  firefox.json
samples/profiles/executor/: example.yaml  executor.json  snappy.json
samples/profiles/task/: firefox.json  snappy.json  snappy.yaml  snappy_without_lcov.yaml
schema/: pulse.capnp
setup/: docker-compose.yml
setup/grafana/dashboards_json/: fuzzy.json
setup/grafana/datasources/: postgres.yml
setup/playbooks/: README.md  fuzzy.yml  hosts.example
setup/playbooks/group_vars/: all
setup/playbooks/roles/common/tasks/: main.yml
setup/playbooks/roles/master/files/: docker-compose.yml
setup/playbooks/roles/master/files/grafana/dashboards/: fuzzy.yml
setup/playbooks/roles/master/files/grafana/dashboards_json/: fuzzy.json
setup/playbooks/roles/master/tasks/: main.yml
setup/playbooks/roles/worker/tasks/: main.yml
src/: cli.yml  common.rs  db.rs  main.rs  models.rs  schema.rs  xpc.rs
src/cli/: corpora.rs  crashes.rs  formatter.rs  mod.rs  profile.rs  tasks.rs
src/common/: cli.rs  constants.rs  corpora.rs  crashes.rs  executors.rs  intervals.rs  mod.rs  profiles.rs  tasks.rs  worker_tasks.rs  xpc.rs
src/db/: enums.rs  mod.rs
src/executor/: corpus_syncer.rs  crash_deduplicator.rs  crash_syncer.rs  crash_validator.rs  docker.rs  file_watcher.rs  mod.rs  native.rs
src/fuzz_driver/: honggfuzz.rs  libfuzzer.rs  mod.rs
src/fuzz_driver/stats/: lcov.rs  llvm_cov.rs  mod.rs
src/master/: cli_service.rs  collector.rs  heartbeat.rs  interface.rs  mod.rs  scheduler.rs
src/trace/: mod.rs  network_layer.rs
src/utils/: fs.rs  mod.rs
src/worker/: dispatcher.rs  log_layer.rs  mod.rs  tasks.rs
utils/coverage_gatherer/: cov.py
