[package]
name = "fuzzy"
version = "0.1.0"
authors = ["tunnelshade <tunnelshade@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
chrono = "0.4"
log = "0.4"
num_cpus = "1.0"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full"] }
tonic = { version = "0.2", features = ["prost"] }
prost = "0.6"
prost-types = "0.6"
uuid = { version = "0.6", features = ["v4"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }
prost-types = "0.6"
prost-build = "0.6"
