[package]
name = "fuzzy"
version = "0.1.0"
authors = ["tunnelshade <tunnelshade@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
chrono = "0.4"
log = "0.4"
heim = { version = "0.1.0-alpha.1", features = ["cpu", "disk", "memory", "process", "runtime-tokio"] }
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full"] }
tonic = { version = "0.2", features = ["prost"] }
prost = "0.6"
prost-types = "0.6"
uuid = { version = "0.6", features = ["v4"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
prettytable-rs = "^0.8"
colored = "1.9"
strum = "0.18.0"
strum_macros = "0.18.0"
ring = "0.16"
data-encoding = "2.2.0"

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }
prost-types = "0.6"
prost-build = "0.6"
