[package]
name = "fuzzy"
version = "0.1.0"
authors = ["tunnelshade <tunnelshade@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
chrono = "0.4"
log = { version = "0.4", features = ["std", "serde"] }
# TODO: Need this for desktops: https://github.com/heim-rs/heim/commit/2629efda7cf2844b00fb66814e5341a0ec0f20b2
# heim = { version = "0.1.0-alpha.1", features = ["cpu", "disk", "memory", "process", "runtime-tokio"] }
heim = { git = "https://github.com/heim-rs/heim", features = ["cpu", "disk", "memory", "process", "runtime-tokio"] }
tokio = { version = "0.2", features = ["full"] }
tonic = { version = "0.2", features = ["prost", "tls"] }
prost = "0.6"
prost-types = "0.6"
uuid = { version = "0.6", features = ["v4"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
prettytable-rs = "^0.8"
colored = "1.9"
strum = "0.18.0"
strum_macros = "0.18.0"
ring = "0.16"
data-encoding = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
inotify = "0.8"
regex = "1.3"
serde_regex = "0.4"
serde_yaml = "0.8"
fern = { version = "0.6", features = ["colored"] }
lcov-parser = "3.2"

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }
prost-types = "0.6"
prost-build = "0.6"
